fix(client): fix Header layout on mobile

--- a/packages/client/src/components/Theme/index.module.scss
+++ b/packages/client/src/components/Theme/index.module.scss
@@ -1,30 +1,35 @@
 .theme {
+  position: relative;
+
   height: 24px;
   width: 24px;
-  position: fixed;
-  top: 50%;
-  right: 50%;
+  // position: fixed;
+  // top: 50%;
+  // right: 50%;
+  // transform: translate(50%, -50%);
+
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: translate(50%, -50%);
 
   .sun {
+    position: relative;
+    z-index: 3;
     background: var(--sun-color);
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    border: 4px solid var(--bg);
+    border: 2px solid var(--bg);
   }
 
   .sunRay {
     width: 2px;
     background: var(--sun-color);
     display: block;
-    height: 121%;
+    height: 125%;
     position: absolute;
-    z-index: -1;
+    z-index: 2;
     transition: 0.4s all, height 0.3s ease-in-out;
 
     $columns: 12;
@@ -46,8 +51,6 @@
   }
 
   .moon {
-    height: 28px;
-    width: 28px;
     position: absolute;
     border-radius: 50%;
     top: 0;
@@ -65,6 +68,8 @@
     }
 
     .moon {
+      height: 28px;
+      width: 28px;
       transform: scale(1) translate(35%, -35%);
       background: var(--bg);
     }
